--- a/internal/templates/pages/home.templ
+++ b/internal/templates/pages/home.templ
@@ -7,6 +7,7 @@ import (
 
 templ HomePage() {
     @shared.Page("Home") {
+        @partials.RenderNextCheckTime()
         @partials.RenderDefault()
     }
 }
