Changed absolute paths to relative paths. Decreased dial timeout from 10 to 3

--- a/internal/templates/partials/configMain.templ
+++ b/internal/templates/partials/configMain.templ
@@ -1,7 +1,7 @@
 package partials
 
 templ ConfigMain() {
-  <section id="main" hx-get="/config/view" hx-trigger="load" hx-swap="outerHTML">
+  <section id="main" hx-get="config/view" hx-trigger="load" hx-swap="outerHTML">
     <p>Loading...</p>
   </section>
 }
