--- a/internal/templates/partials/renderNextCheckTime.templ
+++ b/internal/templates/partials/renderNextCheckTime.templ
@@ -1,7 +1,7 @@
 package partials
 
 templ RenderNextCheckTime() {
-    <div id="nextchecktime" hx-get="/sslchecks/nextcheck" hx-trigger="load" hx-swap="outerHTML">
+    <div id="nextchecktime" hx-get="sslchecks/nextcheck" hx-trigger="load" hx-swap="outerHTML">
         <p>Next check time: loading...</p>
     </div>
 }
