--- a/internal/templates/shared/page.templ
+++ b/internal/templates/shared/page.templ
@@ -15,11 +15,11 @@ templ Page(title string) {
 	</head>
 	<body class="h-full bg-yellow-50 font-mono">
 		<div class="header">
-		<a href="/" class="logo">SSL Expiry Checker</a>
+		<a href="./" class="logo">SSL Expiry Checker</a>
 		<div class="header-right">
-			<a href="/">Home</a>
-			<a href="/config">Config</a>
-			<a href="/about">About</a>
+			<a href="./">Home</a>
+			<a href="config">Config</a>
+			<a href="about">About</a>
 		</div>
 		</div>
 
